fix overflow bug by using overflow hidden and position relative on .App class and also move transitions closer to navigation and remove visibility code and fix new bugs

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,7 +1,7 @@
-html {
-  overflow-x: hidden;
-}
-
 .App {
+  /* https://stackoverflow.com/questions/14270084/overflow-xhidden-doesnt-prevent-content-from-overflowing-in-mobile-browsers */
+  /* Bug with overflow being shown when resizing window - fixed with overflow-x and position */
+  overflow-x: hidden;
+  position: relative;
   text-align: center;
 }
